# myoro-trading-kit

./: .env.example  .gitignore  CLAUDE.md  CREDENTIALS.md  Cargo.toml  Makefile  copy_traders.txt  tauri.conf.json
.cursor/plans/: polymarket_tui_implementation_plan.plan.md
.cursor/rules/: code-owner.mdc  concise-responses.mdc  plans-contain-only-plan.mdc  polymarket-arbitrage.mdc  rust-standards.mdc  visual-and-themes.mdc
.github/workflows/: ci.yml
data/: cache.db
docs/: CUSTOM_STRATEGIES.md  DATA_AND_CREDENTIALS.md  GETTING_STARTED.md  POLYMARKET_SETUP.md  STANDARDS.md
docs/ai-rules/: bun-only.md  code-owner.md  file-size.md  polymarket-arbitrage.md  testing-and-quality.md
docs/standards/: STANDARDS.md
scripts/: derive_polymarket_creds.py
src/: app_state.rs  lib.rs  main.rs
src/backtester/: abm.rs  calibration.rs  copula.rs  data.rs  importance_sampling.rs  math.rs  metrics.rs  mod.rs  monte_carlo.rs  particle_filter.rs
src/backtester/tools/: bootstrap.rs  mod.rs  permutation.rs  risk.rs  sensitivity.rs  stats.rs  stress.rs  tca.rs  walk_forward.rs
src/commands/: backtester.rs  config.rs  copy.rs  crypto.rs  discover.rs  global.rs  mm.rs  mod.rs  portfolio.rs  signals.rs  sports.rs  weather.rs
src/commands/dto/: backtester.rs  copy.rs  crypto.rs  discover.rs  mm.rs  mod.rs  portfolio.rs  shared.rs  sports.rs  weather.rs
src/config/: mod.rs  types.rs
src/copy_trading/: executor.rs  fetcher.rs  mod.rs  types.rs
src/data_providers/: balldontlie.rs  binance.rs  cache.rs  espn.rs  import.rs  mod.rs  polymarket.rs  weather.rs
src/discover/: leaderboard.rs  mod.rs  screener.rs  trader_stats.rs
src/live/: crypto.rs  global.rs  mod.rs  portfolio.rs  sports.rs  weather.rs
src/mm/: mod.rs  quoter.rs  risk.rs  scanner.rs  state.rs
src/pm/: clob.rs  data.rs  mod.rs  ws.rs
src/shared/: execution.rs  mod.rs  position.rs  strategy.rs
src/sports/: discovery.rs
src/sports/data/: kalshi.rs  openfootball.rs
src/sports/signals/: mod.rs  queue.rs
src/sports/strategies/: arb_scanner.rs  home_advantage.rs  in_play_70min.rs  mod.rs  poisson.rs  rule_1_20.rs  toml_strategy.rs
src/strategies/: mod.rs
src/strategies/crypto/: binance_lag.rs  logical_arb.rs  mod.rs
src/strategies/sports/: mod.rs
src/strategies/weather/: forecast_lag.rs  mod.rs
src/strategy_engine/: evaluator.rs  mod.rs  registry.rs  toml_loader.rs
src/trader_stats/: mod.rs
src/tui/: app.rs  layout.rs  mod.rs  presets.rs  router.rs  runner.rs  theme.rs
src/tui/events/: backtester.rs  copy.rs  crypto.rs  discover.rs  global.rs  mod.rs  sports.rs  weather.rs
src/tui/views/: copy.rs  crypto.rs  dialogs.rs  discover.rs  header.rs  mod.rs  (+4 more)
tests/: backtester_integration.rs  commands_integration.rs  paper_trading_e2e.rs  pm_live_integration.rs  tui_flows.rs  tui_render.rs
ui/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
(+71 files in other folders)
