[package]
name = "myoro-trading-kit"
version = "0.1.0"
edition = "2021"
description = "Polymarket arbitrage trading kit — crypto, sports, weather"
authors = []
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
serde_json = "1"
polymarket-client-sdk = { version = "0.4", default-features = false, features = ["clob", "ws", "data", "gamma"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
scraper = "0.19"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = { version = "0.8", features = ["small_rng"] }
rhai = { version = "1", features = ["sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "2" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
mockito = "1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# unwrap_used / expect_used: denied in production code via cfg_attr in lib.rs
